[project]
name = "lunch-box"
version = "0.1.0"
description = "Slack bot for managing lunch reservations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "black>=26.5.1",
    "fastapi[standard]>=0.139.2",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.22",
    "aiohttp>=3.9.0",
    "slack-sdk>=3.43.0",
    "sqlalchemy>=2.0.51",
    "async-lru>=2.3.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
plugins = ["pydantic.mypy"]
exclude = ["^tests/"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
